test/compile_errors/stage1/obj/setAlignStack_outside_function.zig
comptime {
    @setAlignStack(16);
}

// @setAlignStack outside function
//
// tmp.zig:2:5: error: @setAlignStack outside function
